# forsalegame

./: .gitignore  Readme.md  RunGame.py  plots.ipynb  pyproject.toml
core/: forsale.py
game/: RunGame.ipynb  RunGame.py  forsale.py
game/Bots/: AnalyistBot.py  AuctioneerBot.py  BigSpenderBot.py  CheapskateBot.py  GreedyBot.py  HistorianBot.py  PrudentBot.py  RandomBot.py  SmartBot.py  mlbot.py
game/Bots/Super/: PlayerSuper.py
